unpackaged/main/default/objects/Account/fields/Accept_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Accept_Credit_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the partner accepts credit card payments for their services.</description>
    <inlineHelpText>Check this box if the partner accepts credit card payments for accommodation or related services.</inlineHelpText>
    <label>Accept Credit Card</label>
    <type>Checkbox</type>
</CustomField>