unpackaged/main/default/objects/Account/fields/Account_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_Number__c</fullName>
    <externalId>true</externalId>
    <label>Account ID Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>