unpackaged/main/default/objects/Account/fields/Account_Stage_Path__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage_Path__c</fullName>
    <label>Partner Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New_Opportunity</fullName>
                <label>New Opportunity</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
                <isActive>false</isActive>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Parked</fullName>
                <isActive>false</isActive>
                <label>Parked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>