unpackaged/main/default/objects/Account/fields/Activated_LIVE__c.field-meta.xml
<CustomField>
    <fullName>Activated_LIVE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is only to be ticked at the final stage of getting an account LIVE!</inlineHelpText>
    <label>Activated LIVE!</label>
    <type>Checkbox</type>
</CustomField>