unpackaged/main/default/objects/Account/fields/Actual_Revenue_Versus_Annual_Target__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_Versus_Annual_Target__c</fullName>
    <formula>Forecast_Annual_Revenue__c - Revenue_This_Year_NEW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Required to Hit Annual Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>