unpackaged/main/default/objects/Account/fields/Actual_Revenue_Versus_Target_Today__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue_Versus_Target_Today__c</fullName>
    <formula>Revenue_This_Year_NEW__c  -  Forecast_Target_Today__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Revenue Versus Target Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>