unpackaged/main/default/objects/Account/fields/Annual_Revenue_Today_Vs_Forecast_Colour__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Today_Vs_Forecast_Colour__c</fullName>
    <formula>IF(   Actual_Revenue_Versus_Target_Today__c    &lt;=  0,
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30),
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30)
)+&quot;Current Annual Performance Today&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Revenue Today Vs Forecast Colour</label>
    <type>Text</type>
</CustomField>