unpackaged/main/default/objects/Account/fields/API_Link__c.field-meta.xml
<CustomField>
    <fullName>API_Link__c</fullName>
    <inlineHelpText>Attach the weblink to API documentation for this account.</inlineHelpText>
    <label>API Link</label>
    <type>Url</type>
</CustomField>