unpackaged/main/default/objects/Account/fields/ASAP_Accredited__c.field-meta.xml
<CustomField>
    <fullName>ASAP_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASAP Accredited</label>
    <type>Checkbox</type>
</CustomField>