unpackaged/main/default/objects/Account/fields/Average_Budget__c.field-meta.xml
<CustomField>
    <fullName>Average_Budget__c</fullName>
    <label>Average Budget</label>
    <length>200</length>
    <type>Text</type>
</CustomField>