unpackaged/main/default/objects/Account/fields/Average_Rate_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Average_Rate_Last_Year__c</fullName>
    <formula>Total_Revenue_Last_Year_New__c  /  Nights_Booked_Last_Year_NEW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Rate Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>