unpackaged/main/default/objects/Account/fields/Booking_confirmation_sent_to__c.field-meta.xml
<CustomField>
    <fullName>Booking_confirmation_sent_to__c</fullName>
    <label>Booking confirmation sent to?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booker</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>