unpackaged/main/default/objects/Account/fields/Booking_Fees__c.field-meta.xml
<CustomField>
    <fullName>Booking_Fees__c</fullName>
    <label>Booking Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>