unpackaged/main/default/objects/Account/fields/Booking_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Booking_Frequency__c</fullName>
    <label>Booking Frequency</label>
    <length>200</length>
    <type>Text</type>
</CustomField>