unpackaged/main/default/objects/Account/fields/Bookings_Last_Year_New__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Last_Year_New__c</fullName>
    <label>Bookings Last Year New</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>