unpackaged/main/default/objects/Account/fields/Bookings_This_Month_New__c.field-meta.xml
<CustomField>
    <fullName>Bookings_This_Month_New__c</fullName>
    <label>Bookings This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>