unpackaged/main/default/objects/Account/fields/Bookings_This_Year_NEW__c.field-meta.xml
<CustomField>
    <fullName>Bookings_This_Year_NEW__c</fullName>
    <label>Bookings This Year NEW</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>