unpackaged/main/default/objects/Account/fields/Budgets_Notes__c.field-meta.xml
<CustomField>
    <fullName>Budgets_Notes__c</fullName>
    <label>Budgets Notes</label>
    <type>TextArea</type>
</CustomField>