unpackaged/main/default/objects/Account/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <label>Building Name</label>
    <type>TextArea</type>
</CustomField>