unpackaged/main/default/objects/Account/fields/Buildings_Not_to_Use__c.field-meta.xml
<CustomField>
    <fullName>Buildings_Not_to_Use__c</fullName>
    <label>Buildings Not to Use</label>
    <type>TextArea</type>
</CustomField>