unpackaged/main/default/objects/Account/fields/Can_Instant_Book_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Can_Instant_Book_on_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Instant Book on Account</label>
    <type>Checkbox</type>
</CustomField>