unpackaged/main/default/objects/Account/fields/Channel_Managers__c.field-meta.xml
<CustomField>
    <fullName>Channel_Managers__c</fullName>
    <description>Tracks the channel managers used by the partner, selected from a global list.</description>
    <inlineHelpText>Select the channel manager the partner uses. If not listed, specify details in the &#39;Other&#39; field.</inlineHelpText>
    <label>Channel Managers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel_Managers</valueSetName>
    </valueSet>
</CustomField>