unpackaged/main/default/objects/Account/fields/Channel_Managers_Other__c.field-meta.xml
<CustomField>
    <fullName>Channel_Managers_Other__c</fullName>
    <description>Captures additional channel managers not included in the predefined global list.</description>
    <inlineHelpText>Enter details of any other channel managers used by the partner that are not included in the global list.</inlineHelpText>
    <label>Channel Managers (Other)</label>
    <type>TextArea</type>
</CustomField>