unpackaged/main/default/objects/Account/fields/Child_Companies__c.field-meta.xml
<CustomField>
    <fullName>Child_Companies__c</fullName>
    <label>Child Companies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes -Always</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>