unpackaged/main/default/objects/Account/fields/Client_Revenue_This_Year_NEW__c.field-meta.xml
<CustomField>
    <fullName>Client_Revenue_This_Year_NEW__c</fullName>
    <label>Client Revenue This Year NEW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>