unpackaged/main/default/objects/Account/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>Specifies the reason why the account was marked as closed.</description>
    <inlineHelpText>Select the reason for closing the account.</inlineHelpText>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No longer interested</fullName>
            </value>
            <value>
                <fullName>Terms not agreed</fullName>
            </value>
            <value>
                <fullName>Partner not responsive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>