unpackaged/main/default/objects/Account/fields/Commercial_Structure__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Structure__c</fullName>
    <label>Commercial Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Fee</fullName>
            </value>
            <value>
                <fullName>Annual Fee</fullName>
            </value>
            <value>
                <fullName>% per Transaction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>