unpackaged/main/default/objects/Account/fields/Commission_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Commission_Last_Year__c</fullName>
    <formula>(( Total_Revenue_Last_Year_New__c  -  Total_Commission_Last_Year__c )  /  Total_Commission_Last_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission % Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>