unpackaged/main/default/objects/Account/fields/Company_used_for_booking__c.field-meta.xml
<CustomField>
    <fullName>Company_used_for_booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Child companies need to be assigned where necessary</inlineHelpText>
    <label>Company used for booking:</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>