unpackaged/main/default/objects/Account/fields/Content_Added__c.field-meta.xml
<CustomField>
    <fullName>Content_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Added</label>
    <type>Checkbox</type>
</CustomField>