unpackaged/main/default/objects/Account/fields/Content_Approved__c.field-meta.xml
<CustomField>
    <fullName>Content_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Approved</label>
    <type>Checkbox</type>
</CustomField>