unpackaged/main/default/objects/Account/fields/Content_Features__c.field-meta.xml
<CustomField>
    <fullName>Content_Features__c</fullName>
    <label>Content Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static Content</fullName>
            </value>
            <value>
                <fullName>Descriptive Content</fullName>
            </value>
            <value>
                <fullName>Bill Back</fullName>
            </value>
            <value>
                <fullName>Length of Stay Restrictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>