unpackaged/main/default/objects/Account/fields/Conversion_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Conversion_This_Month__c</fullName>
    <formula>Bookings_This_Month_New__c  /  Enquiries_This_Month_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>