unpackaged/main/default/objects/Account/fields/Conversions_This_Quarter_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Conversions_This_Quarter_Last_Year__c</fullName>
    <description>Calculates percentage of conversions for the current quarter last year</description>
    <formula>Bookings_This_Quarter_Last_Year_NEW__c /  Enquiries_This_Quarter_Last_Year_NEW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversions This Quarter Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>