unpackaged/main/default/objects/Account/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <description>Indicates the countries where the partner operates or provides accommodation.</description>
    <inlineHelpText>Select all countries where the partner operates or provides accommodation.</inlineHelpText>
    <label>Countries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UN_Member_States</valueSetName>
    </valueSet>
</CustomField>