unpackaged/main/default/objects/Account/fields/Credit_Checked_On__c.field-meta.xml
<CustomField>
    <fullName>Credit_Checked_On__c</fullName>
    <description>The date the Supplier has been credit checked. This may have been implied from the first successful booking.</description>
    <label>Credit Checked On</label>
    <type>Date</type>
</CustomField>