unpackaged/main/default/objects/Account/fields/Current_Notes__c.field-meta.xml
<CustomField>
    <fullName>Current_Notes__c</fullName>
    <description>This field gets updated using a flow that populates it with the most recent note.</description>
    <label>Last Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>