unpackaged/main/default/objects/Account/fields/Current_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Current_Suppliers__c</fullName>
    <label>Current Suppliers</label>
    <length>200</length>
    <type>Text</type>
</CustomField>