unpackaged/main/default/objects/Account/fields/Custom_Supplier_Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Supplier_Account_Created_Date__c</fullName>
    <label>Custom Supplier Account Created Date</label>
    <type>DateTime</type>
</CustomField>