unpackaged/main/default/objects/Account/fields/Custom_Supplier_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Custom_Supplier_Account_Id__c</fullName>
    <label>Custom Supplier Account Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>