unpackaged/main/default/objects/Account/fields/Data_Protection_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Email__c</fullName>
    <description>The email address for the individual responsible for data protection compliance.</description>
    <inlineHelpText>Enter the contact&#39;s official email address for data protection matters (e.g., dpo@company.com).</inlineHelpText>
    <label>Data Protection Contact Email</label>
    <type>Email</type>
</CustomField>