unpackaged/main/default/objects/Account/fields/Data_Protection_Contact_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Job_Title__c</fullName>
    <description>The job title of the individual responsible for data protection compliance at the partner company.</description>
    <inlineHelpText>Enter the job title of the contact responsible for data protection matters (e.g., &#39;Data Protection Officer&#39;).</inlineHelpText>
    <label>Data Protection Contact Job Title</label>
    <type>TextArea</type>
</CustomField>