unpackaged/main/default/objects/Account/fields/Data_Protection_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Name__c</fullName>
    <description>The full name of the individual responsible for data protection compliance at the partner company.</description>
    <inlineHelpText>Enter the name of the contact responsible for data protection matters at the partner company.</inlineHelpText>
    <label>Data Protection Contact Name</label>
    <type>TextArea</type>
</CustomField>