unpackaged/main/default/objects/Account/fields/Data_Protection_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact_Phone_Number__c</fullName>
    <description>The phone number for the individual responsible for data protection compliance.</description>
    <inlineHelpText>Enter the direct phone number for the data protection contact, including country and area codes if applicable.</inlineHelpText>
    <label>Data Protection Contact Phone Number</label>
    <type>Phone</type>
</CustomField>