unpackaged/main/default/objects/Account/fields/Date_First_Visited__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Visited__c</fullName>
    <label>Date First Visited</label>
    <type>Date</type>
</CustomField>