unpackaged/main/default/objects/Account/fields/Date_Last_Visited__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Visited__c</fullName>
    <label>Date Last Visited</label>
    <type>Date</type>
</CustomField>