unpackaged/main/default/objects/Account/fields/Date_of_First_Booking1__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Booking1__c</fullName>
    <label>Date of First Booking</label>
    <type>Date</type>
</CustomField>