unpackaged/main/default/objects/Account/fields/Date_of_First_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Enquiry__c</fullName>
    <label>Date of First Enquiry</label>
    <type>Date</type>
</CustomField>