unpackaged/main/default/objects/Account/fields/Date_of_Last_Booking__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Booking__c</fullName>
    <label>Date of Last Booking</label>
    <summarizedField>Enquiries_and_Bookings__c.Date_of_Booking__c</summarizedField>
    <summaryFilterItems>
        <field>Enquiries_and_Bookings__c.Enquiry_Status__c</field>
        <operation>equals</operation>
        <value>Closed Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>Enquiries_and_Bookings__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>