unpackaged/main/default/objects/Account/fields/Date_of_Last_Note__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Note__c</fullName>
    <description>Auto populated via a flow when a note is updated.</description>
    <label>Date of Last Note</label>
    <type>DateTime</type>
</CustomField>