unpackaged/main/default/objects/Account/fields/Days_Since_Last_Booking__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Booking__c</fullName>
    <formula>TODAY() -  Date_of_Last_Booking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Booking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>