unpackaged/main/default/objects/Account/fields/Descriptive_Content_Included__c.field-meta.xml
<CustomField>
    <fullName>Descriptive_Content_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Descriptive Content Included</label>
    <type>Checkbox</type>
</CustomField>