unpackaged/main/default/objects/Account/fields/Do_Not_Contact_DNC__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_DNC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the partner has been marked as Do Not Contact. This is typically used for internal purposes, such as service recovery, to ensure no outreach is made.</description>
    <inlineHelpText>Tick this checkbox to mark the partner as Do Not Contact (DNC).

When checked: The partner is flagged as DNC, and no outreach should be made by the team. Contact the Account Owner with any questions.
When unchecked: The partner is not flagged and can be contacted as normal.</inlineHelpText>
    <label>Do Not Contact (DNC)</label>
    <type>Checkbox</type>
</CustomField>