unpackaged/main/default/objects/Account/fields/Enquiries_Last_Month_NEW__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_Last_Month_NEW__c</fullName>
    <label>Enquiries Created Last Month</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>