unpackaged/main/default/objects/Account/fields/Enquiries_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_Last_Year__c</fullName>
    <label>Enquiries Created Last Year</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>