unpackaged/main/default/objects/Account/fields/Enquiries_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_This_Month__c</fullName>
    <label>Enquiries Created This Month</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>