unpackaged/main/default/objects/Account/fields/Enquiries_This_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_This_Quarter__c</fullName>
    <formula>Enquiries_Last_Year_New__c  +  Enquiries_This_Year_NEW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiries This Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>