unpackaged/main/default/objects/Account/fields/Enquiries_This_Quarter_Last_Year_NEW__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_This_Quarter_Last_Year_NEW__c</fullName>
    <label>Enquiries Created This Quarter Last Year</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>